--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,8 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
-  "overrides": [
-    {
-      "files": ["*.ts", "*.mts"],
-      "options": {
-        "parser": "typescript"
-      }
-    }
-  ]
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "tabWidth": 3,
+  "trailingComma": "es5",
+  "importOrder": ["^@/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
